Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...b993666](https://github.com/cri-o/cri-o/compare/v1.20.0...b99366680904420974463572f6f0b92166437b0e) on Fri, 23 Apr 2021 08:35:12 UTC.
+[v1.20.0...98163fd](https://github.com/cri-o/cri-o/compare/v1.20.0...98163fdaa0cdc260dac5feb065e030fda95c7337) on Fri, 23 Apr 2021 15:17:58 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b99366680904420974463572f6f0b92166437b0e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b99366680904420974463572f6f0b92166437b0e.tar.gz)
-- [cri-o.arm64.b99366680904420974463572f6f0b92166437b0e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b99366680904420974463572f6f0b92166437b0e.tar.gz)
+- [cri-o.amd64.98163fdaa0cdc260dac5feb065e030fda95c7337.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.98163fdaa0cdc260dac5feb065e030fda95c7337.tar.gz)
+- [cri-o.arm64.98163fdaa0cdc260dac5feb065e030fda95c7337.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.98163fdaa0cdc260dac5feb065e030fda95c7337.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -69,6 +69,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
+ - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
  - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
