--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...2567995](https://github.com/cri-o/cri-o/compare/v1.20.0...2567995236dd525b07a7dc49a4cf104f98e4141d) on Fri, 23 Apr 2021 21:10:33 UTC.
+[v1.20.0...dd0b833](https://github.com/cri-o/cri-o/compare/v1.20.0...dd0b833ee96083d427d65f20a3fb3602352873ea) on Sat, 24 Apr 2021 02:14:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2567995236dd525b07a7dc49a4cf104f98e4141d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.2567995236dd525b07a7dc49a4cf104f98e4141d.tar.gz)
-- [cri-o.arm64.2567995236dd525b07a7dc49a4cf104f98e4141d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.2567995236dd525b07a7dc49a4cf104f98e4141d.tar.gz)
+- [cri-o.amd64.dd0b833ee96083d427d65f20a3fb3602352873ea.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.dd0b833ee96083d427d65f20a3fb3602352873ea.tar.gz)
+- [cri-o.arm64.dd0b833ee96083d427d65f20a3fb3602352873ea.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.dd0b833ee96083d427d65f20a3fb3602352873ea.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -96,6 +96,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Cri-o managed scopes now depend on the shutdown.target and network.target to allow graceful shutdowns. ([#4654](https://github.com/cri-o/cri-o/pull/4654), [@rphillips](https://github.com/rphillips))
  - Crio adds info level log of the physical image source. ([#4438](https://github.com/cri-o/cri-o/pull/4438), [@QiWang19](https://github.com/QiWang19))
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
+ - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4795](https://github.com/cri-o/cri-o/pull/4795), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - This new release of ocicrypt contains new usable interfaces and thus is a new minor number. This issue details the notable features added as well as a checklist before making a new release that will be used by consuming projects. Target date for completion is 24th January.
