--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.20.0](#changelog-since-v1200)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
+      - [API Change](#api-change)
       - [Feature](#feature)
       - [Design](#design)
       - [Documentation](#documentation)
@@ -17,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...e87d073](https://github.com/cri-o/cri-o/compare/v1.20.0...e87d07350f17035ded1f45d464d9f2eb75ef68ca) on Sat, 24 Apr 2021 04:13:28 UTC.
+[v1.20.0...40d6ec0](https://github.com/cri-o/cri-o/compare/v1.20.0...40d6ec0f56215417267f5297c99bdab3cc36827c) on Sat, 24 Apr 2021 20:02:53 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e87d07350f17035ded1f45d464d9f2eb75ef68ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e87d07350f17035ded1f45d464d9f2eb75ef68ca.tar.gz)
-- [cri-o.arm64.e87d07350f17035ded1f45d464d9f2eb75ef68ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e87d07350f17035ded1f45d464d9f2eb75ef68ca.tar.gz)
+- [cri-o.amd64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz)
+- [cri-o.arm64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -33,6 +34,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Dependency-Change
  - Default pause image is `k8s.gcr.io/pause:3.5` ([#4550](https://github.com/cri-o/cri-o/pull/4550), [@pacoxu](https://github.com/pacoxu))
  - Updated cri-tools to v1.21.0 within static binary bundle ([#4742](https://github.com/cri-o/cri-o/pull/4742), [@saschagrunert](https://github.com/saschagrunert))
+
+#### API Change
+ - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
 
 #### Feature
  - A new CLI option `--registries-conf-dir` is added which allows users to select
@@ -109,7 +113,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
