--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...40d6ec0](https://github.com/cri-o/cri-o/compare/v1.20.0...40d6ec0f56215417267f5297c99bdab3cc36827c) on Sat, 24 Apr 2021 20:02:53 UTC.
+[v1.20.0...d3dbaec](https://github.com/cri-o/cri-o/compare/v1.20.0...d3dbaec060e33870e5cb5c3f7ec4207837804b00) on Sun, 25 Apr 2021 13:19:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz)
-- [cri-o.arm64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40d6ec0f56215417267f5297c99bdab3cc36827c.tar.gz)
+- [cri-o.amd64.d3dbaec060e33870e5cb5c3f7ec4207837804b00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d3dbaec060e33870e5cb5c3f7ec4207837804b00.tar.gz)
+- [cri-o.arm64.d3dbaec060e33870e5cb5c3f7ec4207837804b00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d3dbaec060e33870e5cb5c3f7ec4207837804b00.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -63,6 +63,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
  - Port-forward works for IPv6 only pods ([#4639](https://github.com/cri-o/cri-o/pull/4639), [@aojea](https://github.com/aojea))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
+ - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
  - Support Container Runtime Interface (CRI) security profiles for seccomp, which has been introduced with Kubernetes v1.20.0 and the graduation of the CRI. ([#4358](https://github.com/cri-o/cri-o/pull/4358), [@saschagrunert](https://github.com/saschagrunert))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
 
