Update release notes

--- a/v1.20.2.md
+++ b/v1.20.2.md
@@ -12,20 +12,21 @@
 # CRI-O v1.20.2
 
 The release notes have been generated for the commit range
-[v1.20.1...a2f05e3](https://github.com/cri-o/cri-o/compare/v1.20.1...a2f05e3db07fb3690957af2512bd6421fb2bc111) on Tue, 27 Apr 2021 23:26:50 UTC.
+[v1.20.1...b979f6a](https://github.com/cri-o/cri-o/compare/v1.20.1...b979f6a118e76eac9eb6faa976bbe0307d039d98) on Wed, 28 Apr 2021 13:32:24 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a2f05e3db07fb3690957af2512bd6421fb2bc111.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a2f05e3db07fb3690957af2512bd6421fb2bc111.tar.gz)
-- [cri-o.arm64.a2f05e3db07fb3690957af2512bd6421fb2bc111.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a2f05e3db07fb3690957af2512bd6421fb2bc111.tar.gz)
+- [cri-o.amd64.b979f6a118e76eac9eb6faa976bbe0307d039d98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b979f6a118e76eac9eb6faa976bbe0307d039d98.tar.gz)
+- [cri-o.arm64.b979f6a118e76eac9eb6faa976bbe0307d039d98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b979f6a118e76eac9eb6faa976bbe0307d039d98.tar.gz)
 
 ## Changelog since v1.20.1
 
 ### Changes by Kind
 
 #### Bug or Regression
+ - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
  - Fix running privileged containers causing the `unknown capability "CAP_PERFMON"` error ([#4659](https://github.com/cri-o/cri-o/pull/4659), [@saschagrunert](https://github.com/saschagrunert))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4656](https://github.com/cri-o/cri-o/pull/4656), [@jianzzha](https://github.com/jianzzha))
 
@@ -39,6 +40,7 @@ _Nothing has changed._
 
 ### Changed
 - github.com/containers/common: [v0.21.0 → v0.26.3](https://github.com/containers/common/compare/v0.21.0...v0.26.3)
+- github.com/containers/image/v5: [v5.10.1 → v5.10.6](https://github.com/containers/image/v5/compare/v5.10.1...v5.10.6)
 - github.com/containers/storage: [v1.24.5 → e00c943](https://github.com/containers/storage/compare/v1.24.5...e00c943)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.14.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.14.2)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
