Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...7030929](https://github.com/cri-o/cri-o/compare/v1.20.0...703092975491343ae552d30313b94227e5c6eacc) on Wed, 28 Apr 2021 21:53:50 UTC.
+[v1.20.0...fd8043b](https://github.com/cri-o/cri-o/compare/v1.20.0...fd8043b44f14b2deadc2d06f01c31d5f3f27b435) on Thu, 29 Apr 2021 04:11:18 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.703092975491343ae552d30313b94227e5c6eacc.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.703092975491343ae552d30313b94227e5c6eacc.tar.gz)
-- [cri-o.arm64.703092975491343ae552d30313b94227e5c6eacc.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.703092975491343ae552d30313b94227e5c6eacc.tar.gz)
+- [cri-o.amd64.fd8043b44f14b2deadc2d06f01c31d5f3f27b435.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.fd8043b44f14b2deadc2d06f01c31d5f3f27b435.tar.gz)
+- [cri-o.arm64.fd8043b44f14b2deadc2d06f01c31d5f3f27b435.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.fd8043b44f14b2deadc2d06f01c31d5f3f27b435.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -89,6 +89,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - "crio config" only prints the fields that are different than the default configuration. ([#4682](https://github.com/cri-o/cri-o/pull/4682), [@ityuhui](https://github.com/ityuhui))
+ - Add systemd After=crio.service to containers and conmon ([#4816](https://github.com/cri-o/cri-o/pull/4816), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
@@ -109,7 +110,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4811](https://github.com/cri-o/cri-o/pull/4811), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
