--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...7b9dbd7](https://github.com/cri-o/cri-o/compare/v1.20.0...7b9dbd7e2262e31f9f4e9229fa8797ead801f8c8) on Fri, 30 Apr 2021 07:22:51 UTC.
+[v1.20.0...1f2639c](https://github.com/cri-o/cri-o/compare/v1.20.0...1f2639c9096b874f5ee8d112ad6a31bb97e7f79b) on Fri, 30 Apr 2021 10:43:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7b9dbd7e2262e31f9f4e9229fa8797ead801f8c8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7b9dbd7e2262e31f9f4e9229fa8797ead801f8c8.tar.gz)
-- [cri-o.arm64.7b9dbd7e2262e31f9f4e9229fa8797ead801f8c8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7b9dbd7e2262e31f9f4e9229fa8797ead801f8c8.tar.gz)
+- [cri-o.amd64.1f2639c9096b874f5ee8d112ad6a31bb97e7f79b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1f2639c9096b874f5ee8d112ad6a31bb97e7f79b.tar.gz)
+- [cri-o.arm64.1f2639c9096b874f5ee8d112ad6a31bb97e7f79b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1f2639c9096b874f5ee8d112ad6a31bb97e7f79b.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -74,6 +74,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
+ - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4827](https://github.com/cri-o/cri-o/pull/4827), [@haircommander](https://github.com/haircommander))
@@ -331,7 +332,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/soheilhy/cmux: [v0.1.4 → v0.1.5](https://github.com/soheilhy/cmux/compare/v0.1.4...v0.1.5)
 - github.com/spf13/cobra: [v1.1.1 → v1.1.3](https://github.com/spf13/cobra/compare/v1.1.1...v1.1.3)
 - github.com/stretchr/testify: [v1.6.1 → v1.7.0](https://github.com/stretchr/testify/compare/v1.6.1...v1.7.0)
-- github.com/syndtr/gocapability: [d983527 → 42c35b4](https://github.com/syndtr/gocapability/compare/d983527...42c35b4)
 - github.com/u-root/u-root: [v6.0.0+incompatible → v7.0.0+incompatible](https://github.com/u-root/u-root/compare/v6.0.0...v7.0.0)
 - github.com/uber/jaeger-client-go: [v2.24.0+incompatible → v2.25.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.24.0...v2.25.0)
 - github.com/ulikunitz/xz: [v0.5.8 → v0.5.10](https://github.com/ulikunitz/xz/compare/v0.5.8...v0.5.10)
