--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...a953b5b](https://github.com/cri-o/cri-o/compare/v1.20.0...a953b5be42a0c22fa6cf149002a0f60ab49c857c) on Fri, 30 Apr 2021 12:28:45 UTC.
+[v1.20.0...52e15e0](https://github.com/cri-o/cri-o/compare/v1.20.0...52e15e070f0e8b5ccc94fa58fe9e09d30e7b45c5) on Fri, 30 Apr 2021 18:14:40 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a953b5be42a0c22fa6cf149002a0f60ab49c857c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a953b5be42a0c22fa6cf149002a0f60ab49c857c.tar.gz)
-- [cri-o.arm64.a953b5be42a0c22fa6cf149002a0f60ab49c857c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a953b5be42a0c22fa6cf149002a0f60ab49c857c.tar.gz)
+- [cri-o.amd64.52e15e070f0e8b5ccc94fa58fe9e09d30e7b45c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.52e15e070f0e8b5ccc94fa58fe9e09d30e7b45c5.tar.gz)
+- [cri-o.arm64.52e15e070f0e8b5ccc94fa58fe9e09d30e7b45c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.52e15e070f0e8b5ccc94fa58fe9e09d30e7b45c5.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -99,6 +99,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4831](https://github.com/cri-o/cri-o/pull/4831), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4795](https://github.com/cri-o/cri-o/pull/4795), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4829](https://github.com/cri-o/cri-o/pull/4829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4819](https://github.com/cri-o/cri-o/pull/4819), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
@@ -111,7 +112,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4811](https://github.com/cri-o/cri-o/pull/4811), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
