Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...8a9a2c7](https://github.com/cri-o/cri-o/compare/v1.20.0...8a9a2c70fd28062773ca8c9886b9e383587281a6) on Tue, 04 May 2021 12:22:09 UTC.
+[v1.20.0...6b6b54e](https://github.com/cri-o/cri-o/compare/v1.20.0...6b6b54e5be459fc80c7090fc550ed6e5c5f3545a) on Wed, 05 May 2021 07:18:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8a9a2c70fd28062773ca8c9886b9e383587281a6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8a9a2c70fd28062773ca8c9886b9e383587281a6.tar.gz)
-- [cri-o.arm64.8a9a2c70fd28062773ca8c9886b9e383587281a6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8a9a2c70fd28062773ca8c9886b9e383587281a6.tar.gz)
+- [cri-o.amd64.6b6b54e5be459fc80c7090fc550ed6e5c5f3545a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6b6b54e5be459fc80c7090fc550ed6e5c5f3545a.tar.gz)
+- [cri-o.arm64.6b6b54e5be459fc80c7090fc550ed6e5c5f3545a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6b6b54e5be459fc80c7090fc550ed6e5c5f3545a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -81,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
  - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
  - Fix a bug where pods or containers could be cleaned up out of order if the request timed out ([#4722](https://github.com/cri-o/cri-o/pull/4722), [@haircommander](https://github.com/haircommander))
+ - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Fixed a bug which would cause configuration files to not be reloaded properly on SIGHUP when one or more "drop-in" configuration files were being used. ([#4694](https://github.com/cri-o/cri-o/pull/4694), [@nalind](https://github.com/nalind))
