Update release notes

--- a/v1.20.2.md
+++ b/v1.20.2.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.2
 
 The release notes have been generated for the commit range
-[v1.20.1...fc8b9e9](https://github.com/cri-o/cri-o/compare/v1.20.1...fc8b9e9db38f5816eef515918769abd26dafd651) on Wed, 28 Apr 2021 19:09:07 UTC.
+[v1.20.1...704b03d](https://github.com/cri-o/cri-o/compare/v1.20.1...704b03d7a451df6455a8c75f479cb078f7ec17f5) on Wed, 05 May 2021 09:00:08 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fc8b9e9db38f5816eef515918769abd26dafd651.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.fc8b9e9db38f5816eef515918769abd26dafd651.tar.gz)
-- [cri-o.arm64.fc8b9e9db38f5816eef515918769abd26dafd651.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.fc8b9e9db38f5816eef515918769abd26dafd651.tar.gz)
+- [cri-o.amd64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz)
+- [cri-o.arm64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz)
 
 ## Changelog since v1.20.1
 
@@ -31,6 +31,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4656](https://github.com/cri-o/cri-o/pull/4656), [@jianzzha](https://github.com/jianzzha))
 
 #### Uncategorized
+ - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4847](https://github.com/cri-o/cri-o/pull/4847), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix bug where cri-o would fail if tzdata package wasn't installed ([#4716](https://github.com/cri-o/cri-o/pull/4716), [@haircommander](https://github.com/haircommander))
 
 ## Dependencies
